--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -1078,6 +1078,7 @@
 	"Unarchive All": "",
 	"Unarchive All Archived Chats": "",
 	"Unarchive Chat": "",
+	"Unfold the folding control before completion": "",
 	"Unlock mysteries": "",
 	"Unpin": "",
 	"Unravel secrets": "",
